@@ -1,23 +1,32 @@
 package com.wdiscute.starcatcher.recipe;
 
+import com.google.gson.JsonArray;
+import com.google.gson.JsonObject;
 import com.mojang.serialization.Codec;
 import com.mojang.serialization.DataResult;
+import com.mojang.serialization.DynamicOps;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
+import com.wdiscute.starcatcher.io.ExtraComposites;
+import com.wdiscute.starcatcher.io.StreamCodec;
 import com.wdiscute.starcatcher.registry.ModRecipes;
 import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.ByteBufCodecs;
-import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.nbt.NbtOps;
+import net.minecraft.network.FriendlyByteBuf;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.ExtraCodecs;
+import net.minecraft.util.GsonHelper;
+import net.minecraft.world.entity.player.StackedContents;
+import net.minecraft.world.inventory.CraftingContainer;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.CraftingBookCategory;
-import net.minecraft.world.item.crafting.CraftingRecipe;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.RecipeSerializer;
+import net.minecraft.world.item.crafting.*;
 import net.minecraft.world.level.Level;
+import net.minecraftforge.common.util.RecipeMatcher;
+import org.jetbrains.annotations.Nullable;
 
+import java.util.ArrayList;
 import java.util.List;
 
 public class ModifierShapelessRecipe implements CraftingRecipe
@@ -52,13 +61,18 @@ public class ModifierShapelessRecipe implements CraftingRecipe
     }
 
     @Override
+    public ResourceLocation getId() {
+        return null;
+    }
+
+    @Override
     public CraftingBookCategory category()
     {
         return this.category;
     }
 
     @Override
-    public ItemStack getResultItem(HolderLookup.Provider registries)
+    public ItemStack getResultItem(RegistryAccess registries)
     {
         return this.result;
     }
@@ -69,31 +83,34 @@ public class ModifierShapelessRecipe implements CraftingRecipe
         return this.ingredients;
     }
 
-    public boolean matches(CraftingInput input, Level level)
+    public ItemStack assemble(CraftingContainer container, RegistryAccess registryAccess)
     {
-        if (input.ingredientCount() != this.ingredients.size())
+        return this.result.copy();
+    }
+
+    @Override
+    public boolean matches(CraftingContainer container, Level level) {
+        StackedContents contents = new StackedContents();
+        container.fillStackedContents(contents);
+
+        if (container.getItems().size() != this.ingredients.size())
         {
             return false;
         }
         else if (!isSimple)
         {
-            var nonEmptyItems = new java.util.ArrayList<ItemStack>(input.ingredientCount());
-            for (var item : input.items())
+            var nonEmptyItems = new java.util.ArrayList<ItemStack>(container.getItems().size());
+            for (var item : container.getItems())
                 if (!item.isEmpty())
                     nonEmptyItems.add(item);
-            return net.neoforged.neoforge.common.util.RecipeMatcher.findMatches(nonEmptyItems, this.ingredients) != null;
+            return RecipeMatcher.findMatches(nonEmptyItems, this.ingredients) != null;
         }
         else
         {
-            return input.size() == 1 && this.ingredients.size() == 1
-                    ? this.ingredients.getFirst().test(input.getItem(0))
-                    : input.stackedContents().canCraft(this, null);
+            return container.getItems().size() == 1 && this.ingredients.size() == 1
+                    ? this.ingredients.get(0).test(container.getItems().get(0))
+                    : contents.canCraft(this, null);
         }
-    }
-
-    public ItemStack assemble(CraftingInput input, HolderLookup.Provider registries)
-    {
-        return this.result.copy();
     }
 
     /**
@@ -107,77 +124,61 @@ public class ModifierShapelessRecipe implements CraftingRecipe
 
     public static class Serializer implements RecipeSerializer<ModifierShapelessRecipe>
     {
-        private static final MapCodec<ModifierShapelessRecipe> CODEC = RecordCodecBuilder.mapCodec(
-                p_340779_ -> p_340779_.group(
-                                Codec.STRING.optionalFieldOf("group", "").forGetter(p_301127_ -> p_301127_.group),
-                                CraftingBookCategory.CODEC.fieldOf("category").orElse(CraftingBookCategory.MISC).forGetter(p_301133_ -> p_301133_.category),
-                                ItemStack.STRICT_CODEC.fieldOf("result").forGetter(p_301142_ -> p_301142_.result),
-                                Ingredient.CODEC_NONEMPTY
-                                        .listOf()
-                                        .fieldOf("ingredients")
-                                        .flatXmap(
-                                                p_301021_ ->
-                                                {
-                                                    Ingredient[] aingredient = p_301021_.toArray(Ingredient[]::new); // Neo skip the empty check and immediately create the array.
-                                                    if (aingredient.length == 0)
-                                                    {
-                                                        return DataResult.error(() -> "No ingredients for shapeless recipe");
-                                                    }
-                                                    else
-                                                    {
-                                                        return aingredient.length > 3 * 3
-                                                                ? DataResult.error(() -> "Too many ingredients for shapeless recipe. The maximum is: %s".formatted(3 * 3))
-                                                                : DataResult.success(NonNullList.of(Ingredient.EMPTY, aingredient));
-                                                    }
-                                                },
-                                                DataResult::success
-                                        )
-                                        .forGetter(p_300975_ -> p_300975_.ingredients),
-                                ResourceLocation.CODEC.listOf().fieldOf("modifiers").forGetter(p_311730_ -> p_311730_.modifiers)
-                        )
-                        .apply(p_340779_, ModifierShapelessRecipe::new)
-        );
-        public static final StreamCodec<RegistryFriendlyByteBuf, ModifierShapelessRecipe> STREAM_CODEC = StreamCodec.of(
-                Serializer::toNetwork, Serializer::fromNetwork
+
+        public static final StreamCodec<ModifierShapelessRecipe> STREAM_CODEC = StreamCodec.composite(
+                StreamCodec.STRING, rec -> rec.group,
+                StreamCodec.CRAFTING_BOOK_CATEGORY, rec -> rec.category,
+                StreamCodec.ITEM_STACK, rec -> rec.result,
+                StreamCodec.INGREDIENT.nonNullList(Ingredient.EMPTY), rec -> rec.ingredients,
+                StreamCodec.RESOURCE_LOCATION.list(), rec -> rec.modifiers,
+                ModifierShapelessRecipe::new
         );
 
         @Override
-        public MapCodec<ModifierShapelessRecipe> codec()
-        {
-            return CODEC;
+        public ModifierShapelessRecipe fromJson(ResourceLocation recipeId, JsonObject json) {
+            String source = GsonHelper.getAsString(json, "group");
+            CraftingBookCategory bookCategory = CraftingBookCategory.CODEC.byName(GsonHelper.getAsString(json, "category", null), CraftingBookCategory.MISC);
+            ItemStack result = ShapedRecipe.itemStackFromJson(GsonHelper.getAsJsonObject(json, "result"));
+            NonNullList<Ingredient> ingredients = itemsFromJson(GsonHelper.getAsJsonArray(json, "ingredients"));
+            List<ResourceLocation> modifiers = locsFromJson(GsonHelper.getAsJsonArray(json, "modifiers"));
+
+            return new ModifierShapelessRecipe(source, bookCategory, result, ingredients, modifiers);
         }
 
-        @Override
-        public StreamCodec<RegistryFriendlyByteBuf, ModifierShapelessRecipe> streamCodec()
-        {
-            return STREAM_CODEC;
-        }
+        private static NonNullList<Ingredient> itemsFromJson(JsonArray ingredientArray) {
+            NonNullList<Ingredient> nonnulllist = NonNullList.create();
 
-        private static ModifierShapelessRecipe fromNetwork(RegistryFriendlyByteBuf buffer)
-        {
-            String s = buffer.readUtf();
-            CraftingBookCategory craftingbookcategory = buffer.readEnum(CraftingBookCategory.class);
-            int i = buffer.readVarInt();
-            NonNullList<Ingredient> nonnulllist = NonNullList.withSize(i, Ingredient.EMPTY);
-            nonnulllist.replaceAll(p_319735_ -> Ingredient.CONTENTS_STREAM_CODEC.decode(buffer));
-            ItemStack itemstack = ItemStack.STREAM_CODEC.decode(buffer);
-            List<ResourceLocation> modifiers = ResourceLocation.STREAM_CODEC.apply(ByteBufCodecs.list()).decode(buffer);
-            return new ModifierShapelessRecipe(s, craftingbookcategory, itemstack, nonnulllist, modifiers);
-        }
-
-        private static void toNetwork(RegistryFriendlyByteBuf buffer, ModifierShapelessRecipe recipe)
-        {
-            buffer.writeUtf(recipe.group);
-            buffer.writeEnum(recipe.category);
-            buffer.writeVarInt(recipe.ingredients.size());
-
-            for (Ingredient ingredient : recipe.ingredients)
-            {
-                Ingredient.CONTENTS_STREAM_CODEC.encode(buffer, ingredient);
+            for(int i = 0; i < ingredientArray.size(); ++i) {
+                Ingredient ingredient = Ingredient.fromJson(ingredientArray.get(i), false);
+                if (!ingredient.isEmpty()) {
+                    nonnulllist.add(ingredient);
+                }
             }
 
-            ItemStack.STREAM_CODEC.encode(buffer, recipe.result);
-            ResourceLocation.STREAM_CODEC.apply(ByteBufCodecs.list()).encode(buffer, recipe.modifiers);
+            return nonnulllist;
+        }
+
+
+        private static List<ResourceLocation> locsFromJson(JsonArray ingredientArray) {
+            List<ResourceLocation> list = new ArrayList<>();
+
+            for(int i = 0; i < ingredientArray.size(); ++i) {
+                ResourceLocation loc =  new ResourceLocation(ingredientArray.get(i).getAsString());
+                list.add(loc);
+            }
+
+            return list;
+        }
+
+
+        @Override
+        public @Nullable ModifierShapelessRecipe fromNetwork(ResourceLocation recipeId, FriendlyByteBuf buffer) {
+            return STREAM_CODEC.decode(buffer);
+        }
+
+        @Override
+        public void toNetwork(FriendlyByteBuf buffer, ModifierShapelessRecipe recipe) {
+            STREAM_CODEC.encode(buffer, recipe);
         }
     }
 
